--- a/MyTwitterApp/MyTwitterApp/Classes/Views/TweetCellSmall.xib
+++ b/MyTwitterApp/MyTwitterApp/Classes/Views/TweetCellSmall.xib
@@ -2,24 +2,25 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="131" id="JqW-vR-Bpa" customClass="TweetCell">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="242" id="JqW-vR-Bpa" customClass="TweetCell">
             <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JqW-vR-Bpa" id="E8x-Ny-tIp">
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ユーザー名aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e25-FV-EyQ">
-                        <rect key="frame" x="64" y="8" width="152" height="15"/>
+                        <rect key="frame" x="64" y="8" width="136" height="15"/>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="@screennameaaaaaaa" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O0b-VA-7fk">
-                        <rect key="frame" x="224" y="8" width="48" height="15"/>
+                        <rect key="frame" x="208" y="8" width="48" height="15"/>
                         <constraints>
                             <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="nSZ-81-MPN"/>
                         </constraints>
@@ -27,10 +28,10 @@
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2秒前" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T4e-Gf-UZ5">
-                        <rect key="frame" x="280" y="8" width="32" height="15"/>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="2秒前" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T4e-Gf-UZ5">
+                        <rect key="frame" x="264" y="8" width="48" height="15"/>
                         <constraints>
-                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="32" id="AaZ-Sa-NAW"/>
+                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="48" id="AaZ-Sa-NAW"/>
                         </constraints>
                         <fontDescription key="fontDescription" type="system" pointSize="12"/>
                         <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
@@ -54,6 +55,12 @@
                             <constraint firstAttribute="height" constant="48" id="ceu-Yr-xgw"/>
                         </constraints>
                     </imageView>
+                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="UmR-mw-RU0">
+                        <rect key="frame" x="64" y="56" width="248" height="1"/>
+                        <constraints>
+                            <constraint firstAttribute="width" secondItem="UmR-mw-RU0" secondAttribute="height" multiplier="248:1" id="Cy3-uC-iRq"/>
+                        </constraints>
+                    </imageView>
                 </subviews>
                 <constraints>
                     <constraint firstItem="fBr-3D-zHy" firstAttribute="leading" secondItem="E8x-Ny-tIp" secondAttribute="leading" constant="8" id="1o4-CX-yjl"/>
@@ -64,10 +71,13 @@
                     <constraint firstItem="pIW-NZ-AUY" firstAttribute="leading" secondItem="fBr-3D-zHy" secondAttribute="trailing" constant="8" id="H8B-Jz-UZS"/>
                     <constraint firstItem="T4e-Gf-UZ5" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" constant="8" id="I0Q-ka-I9X"/>
                     <constraint firstItem="e25-FV-EyQ" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" constant="8" id="ILz-gb-Ko7"/>
+                    <constraint firstItem="UmR-mw-RU0" firstAttribute="leading" secondItem="fBr-3D-zHy" secondAttribute="trailing" constant="8" id="NqL-g8-WAP"/>
                     <constraint firstItem="e25-FV-EyQ" firstAttribute="leading" secondItem="fBr-3D-zHy" secondAttribute="trailing" constant="8" id="Okn-qT-PLq"/>
                     <constraint firstItem="pIW-NZ-AUY" firstAttribute="top" secondItem="e25-FV-EyQ" secondAttribute="bottom" constant="8" id="TIY-0T-fOy"/>
+                    <constraint firstItem="UmR-mw-RU0" firstAttribute="top" secondItem="pIW-NZ-AUY" secondAttribute="bottom" constant="8" id="djw-O0-qLE"/>
                     <constraint firstItem="O0b-VA-7fk" firstAttribute="leading" secondItem="e25-FV-EyQ" secondAttribute="trailing" constant="8" id="ehW-8D-qx3"/>
                     <constraint firstItem="O0b-VA-7fk" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" constant="8" id="s2o-Mk-FV3"/>
+                    <constraint firstAttribute="trailing" secondItem="UmR-mw-RU0" secondAttribute="trailing" constant="8" id="u3f-qm-Qf8"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
@@ -76,8 +86,10 @@
                 <outlet property="profileImageView" destination="fBr-3D-zHy" id="FRd-dm-n7q"/>
                 <outlet property="screenNameLabel" destination="O0b-VA-7fk" id="roU-6D-lrE"/>
                 <outlet property="timeLabel" destination="T4e-Gf-UZ5" id="Xw1-ZP-ip9"/>
+                <outlet property="tweetImageAspectRatioConstraint" destination="Cy3-uC-iRq" id="VRK-kF-eYz"/>
+                <outlet property="tweetImageView" destination="UmR-mw-RU0" id="xGL-dW-Bfo"/>
             </connections>
-            <point key="canvasLocation" x="457" y="117.5"/>
+            <point key="canvasLocation" x="457" y="172.5"/>
         </tableViewCell>
     </objects>
 </document>
