add retweet in tableviewcell

--- a/MyTwitterApp/MyTwitterApp/Classes/Views/TweetCellSmall.xib
+++ b/MyTwitterApp/MyTwitterApp/Classes/Views/TweetCellSmall.xib
@@ -7,8 +7,8 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="242" id="JqW-vR-Bpa" customClass="TweetCell">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="327" id="JqW-vR-Bpa" customClass="TweetCell">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="87"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="JqW-vR-Bpa" id="E8x-Ny-tIp">
                 <autoresizingMask key="autoresizingMask"/>
@@ -61,11 +61,34 @@
                             <constraint firstAttribute="width" secondItem="UmR-mw-RU0" secondAttribute="height" multiplier="248:1" id="Cy3-uC-iRq"/>
                         </constraints>
                     </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="nKx-ns-SR4">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="0.0"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="ユーザー名さんがリツイート" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L9k-DR-icp">
+                                <rect key="frame" x="64" y="8" width="248" height="15"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
+                                <color key="textColor" red="0.45098039215686275" green="0.69803921568627447" blue="0.32156862745098036" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="L9k-DR-icp" firstAttribute="top" secondItem="nKx-ns-SR4" secondAttribute="top" constant="8" id="PPh-1Z-nSJ"/>
+                            <constraint firstAttribute="trailing" secondItem="L9k-DR-icp" secondAttribute="trailing" constant="8" id="WdF-xP-24L"/>
+                            <constraint firstAttribute="bottom" secondItem="L9k-DR-icp" secondAttribute="bottom" id="hR3-xj-sJL"/>
+                            <constraint firstAttribute="height" id="rHJ-wL-L9N"/>
+                            <constraint firstItem="L9k-DR-icp" firstAttribute="leading" secondItem="nKx-ns-SR4" secondAttribute="leading" constant="64" id="yaG-5i-RbX"/>
+                        </constraints>
+                    </view>
                 </subviews>
                 <constraints>
                     <constraint firstItem="fBr-3D-zHy" firstAttribute="leading" secondItem="E8x-Ny-tIp" secondAttribute="leading" constant="8" id="1o4-CX-yjl"/>
                     <constraint firstItem="T4e-Gf-UZ5" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="O0b-VA-7fk" secondAttribute="trailing" constant="8" id="2p3-KP-ECR"/>
+                    <constraint firstItem="T4e-Gf-UZ5" firstAttribute="top" secondItem="nKx-ns-SR4" secondAttribute="bottom" constant="8" id="8jy-W8-gRe"/>
+                    <constraint firstItem="nKx-ns-SR4" firstAttribute="leading" secondItem="E8x-Ny-tIp" secondAttribute="leading" id="9BJ-xT-eNx"/>
                     <constraint firstAttribute="trailing" secondItem="pIW-NZ-AUY" secondAttribute="trailing" constant="8" id="9RA-q1-1iS"/>
+                    <constraint firstItem="e25-FV-EyQ" firstAttribute="top" secondItem="nKx-ns-SR4" secondAttribute="bottom" constant="8" id="B4u-Dh-WU0"/>
+                    <constraint firstItem="nKx-ns-SR4" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" id="BbB-2i-sM2"/>
                     <constraint firstItem="T4e-Gf-UZ5" firstAttribute="trailing" secondItem="E8x-Ny-tIp" secondAttribute="trailing" constant="-8" id="EM0-lm-O18"/>
                     <constraint firstItem="fBr-3D-zHy" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" constant="8" id="EeK-14-45v"/>
                     <constraint firstItem="pIW-NZ-AUY" firstAttribute="leading" secondItem="fBr-3D-zHy" secondAttribute="trailing" constant="8" id="H8B-Jz-UZS"/>
@@ -73,23 +96,37 @@
                     <constraint firstItem="e25-FV-EyQ" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" constant="8" id="ILz-gb-Ko7"/>
                     <constraint firstItem="UmR-mw-RU0" firstAttribute="leading" secondItem="fBr-3D-zHy" secondAttribute="trailing" constant="8" id="NqL-g8-WAP"/>
                     <constraint firstItem="e25-FV-EyQ" firstAttribute="leading" secondItem="fBr-3D-zHy" secondAttribute="trailing" constant="8" id="Okn-qT-PLq"/>
+                    <constraint firstItem="fBr-3D-zHy" firstAttribute="top" secondItem="nKx-ns-SR4" secondAttribute="bottom" constant="8" id="Rur-Mc-Plv"/>
                     <constraint firstItem="pIW-NZ-AUY" firstAttribute="top" secondItem="e25-FV-EyQ" secondAttribute="bottom" constant="8" id="TIY-0T-fOy"/>
                     <constraint firstItem="UmR-mw-RU0" firstAttribute="top" secondItem="pIW-NZ-AUY" secondAttribute="bottom" constant="8" id="djw-O0-qLE"/>
                     <constraint firstItem="O0b-VA-7fk" firstAttribute="leading" secondItem="e25-FV-EyQ" secondAttribute="trailing" constant="8" id="ehW-8D-qx3"/>
+                    <constraint firstItem="O0b-VA-7fk" firstAttribute="top" secondItem="nKx-ns-SR4" secondAttribute="bottom" constant="8" id="rFi-39-rMo"/>
+                    <constraint firstAttribute="trailing" secondItem="nKx-ns-SR4" secondAttribute="trailing" id="rdO-M6-tdM"/>
                     <constraint firstItem="O0b-VA-7fk" firstAttribute="top" secondItem="E8x-Ny-tIp" secondAttribute="top" constant="8" id="s2o-Mk-FV3"/>
                     <constraint firstAttribute="trailing" secondItem="UmR-mw-RU0" secondAttribute="trailing" constant="8" id="u3f-qm-Qf8"/>
                 </constraints>
+                <variation key="default">
+                    <mask key="constraints">
+                        <exclude reference="EeK-14-45v"/>
+                        <exclude reference="ILz-gb-Ko7"/>
+                        <exclude reference="s2o-Mk-FV3"/>
+                        <exclude reference="I0Q-ka-I9X"/>
+                    </mask>
+                </variation>
             </tableViewCellContentView>
             <connections>
                 <outlet property="contentLabel" destination="pIW-NZ-AUY" id="m9h-L6-DTW"/>
                 <outlet property="nameLabel" destination="e25-FV-EyQ" id="Ja4-Wf-mMu"/>
                 <outlet property="profileImageView" destination="fBr-3D-zHy" id="FRd-dm-n7q"/>
+                <outlet property="retweetLabel" destination="L9k-DR-icp" id="qUk-re-8Ob"/>
+                <outlet property="retweetView" destination="nKx-ns-SR4" id="TLR-xu-V5z"/>
+                <outlet property="retweetViewHeightConstraint" destination="rHJ-wL-L9N" id="0gT-JL-9dB"/>
                 <outlet property="screenNameLabel" destination="O0b-VA-7fk" id="roU-6D-lrE"/>
                 <outlet property="timeLabel" destination="T4e-Gf-UZ5" id="Xw1-ZP-ip9"/>
                 <outlet property="tweetImageAspectRatioConstraint" destination="Cy3-uC-iRq" id="VRK-kF-eYz"/>
                 <outlet property="tweetImageView" destination="UmR-mw-RU0" id="xGL-dW-Bfo"/>
             </connections>
-            <point key="canvasLocation" x="457" y="172.5"/>
+            <point key="canvasLocation" x="457" y="214.5"/>
         </tableViewCell>
     </objects>
 </document>
