--- a/MyTwitterApp/MyTwitterApp/Base.lproj/Main.storyboard
+++ b/MyTwitterApp/MyTwitterApp/Base.lproj/Main.storyboard
@@ -2,6 +2,7 @@
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7706" systemVersion="14E46" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="U6d-TP-69H">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7703"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--Account View Controller-->
@@ -90,6 +91,7 @@
                     <navigationItem key="navigationItem" id="nao-m7-i0T"/>
                     <connections>
                         <segue destination="P5y-9b-pFM" kind="show" identifier="ShowTweetDetail" id="mgy-QF-rQo"/>
+                        <segue destination="aRh-V5-1bp" kind="show" identifier="ShowTweetEditFromTImeline" id="hqf-st-VdA"/>
                     </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RZy-jP-PQM" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -117,10 +119,65 @@
                             <outlet property="delegate" destination="P5y-9b-pFM" id="Y4T-oZ-2oU"/>
                         </connections>
                     </tableView>
+                    <connections>
+                        <segue destination="aRh-V5-1bp" kind="show" identifier="ShowTweetEditFromTweetDetail" id="uZG-62-M7o"/>
+                        <segue destination="aRh-V5-1bp" kind="show" identifier="ShowTweetEditFromTweetDetailAsReply" id="grq-Du-8Lv"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YRm-iE-n9k" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1833" y="1020"/>
         </scene>
+        <!--Tweet Edit View Controller-->
+        <scene sceneID="BHf-Qm-bfi">
+            <objects>
+                <viewController id="aRh-V5-1bp" customClass="TweetEditViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="FYc-2h-l58"/>
+                        <viewControllerLayoutGuide type="bottom" id="WXd-WL-8zE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="dir-ob-xaq">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="9jc-rV-gjv">
+                                <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <string key="text">Lorem ipsum dolor sit er elit lamet, consectetaur cillium adipisicing pecu, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Nam liber te conscient to factor tum poen legum odioque civiuda.</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
+                                <connections>
+                                    <outlet property="delegate" destination="aRh-V5-1bp" id="02o-Xd-se0"/>
+                                </connections>
+                            </textView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4hX-2G-zTp">
+                                <rect key="frame" x="538" y="559" width="42" height="21"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="calibratedWhite"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="9jc-rV-gjv" secondAttribute="trailing" id="4rE-vu-nFK"/>
+                            <constraint firstItem="9jc-rV-gjv" firstAttribute="bottom" secondItem="4hX-2G-zTp" secondAttribute="bottom" constant="20" id="7Pw-rC-3hb"/>
+                            <constraint firstItem="4hX-2G-zTp" firstAttribute="trailing" secondItem="9jc-rV-gjv" secondAttribute="trailing" constant="-20" id="OUc-5S-OvO"/>
+                            <constraint firstItem="9jc-rV-gjv" firstAttribute="top" secondItem="dir-ob-xaq" secondAttribute="topMargin" id="Ry3-vw-uyC"/>
+                            <constraint firstItem="9jc-rV-gjv" firstAttribute="leading" secondItem="dir-ob-xaq" secondAttribute="leading" id="pWB-Fs-pGM"/>
+                            <constraint firstAttribute="bottomMargin" secondItem="9jc-rV-gjv" secondAttribute="bottom" id="r4z-Vb-62T"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="lengthLabel" destination="4hX-2G-zTp" id="Huw-2c-IlV"/>
+                        <outlet property="textView" destination="9jc-rV-gjv" id="TEc-ye-D0i"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="vme-Rn-XyD" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1833" y="1779"/>
+        </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="grq-Du-8Lv"/>
+    </inferredMetricsTieBreakers>
 </document>
